Part 2: Fix -Wcast-qual and -Wunused-lambda-capture warnings in WebCore with new clang compiler <https://webkit.org/b/178036> <rdar://problem/33667497>

Reviewed by Chris Dumez.

* Modules/cache/WorkerCacheStorageConnection.cpp:
(WebCore::WorkerCacheStorageConnection::doRemove):
- Change ASSERT() to ASSERT_UNUSED() to suppress warnings about
  unused lambda capture for 'cacheIdentifier' in Release builds.
* bridge/objc/objc_class.mm:
(JSC::Bindings::ObjcClass::classForIsA): Change C-style cast
into reinterpret_cast and const_cast to go from CFTypeRef to
ObjcClass*.
* crypto/mac/CryptoKeyRSAMac.cpp:
(WebCore::castDataArgumentToCCRSACryptorCreateFromDataIfNeeded):
Add.  Introduce method to add a required const_cast for older
OSes since the signature of CCRSACryptorCreateFromData() changed
in iOS 11 & High Sierra.
(WebCore::CryptoKeyRSA::create): Use
castDataArgumentToCCRSACryptorCreateFromDataIfNeeded().
* platform/graphics/cocoa/WebCoreDecompressionSession.mm:
(WebCore::WebCoreDecompressionSession::handleDecompressionOutput):
Remove unused lambda capture for 'status'.


Canonical link: https://commits.webkit.org/194441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223212 268f45cc-cd09-0410-ab3c-d52691b4dbfc